<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_alignBottom="@+id/imageView1"
            android:background="@drawable/black_semi_trans_strip"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/pad_10dp"
            android:id="@+id/contactus2">

            <LinearLayout
                android:layout_width="@dimen/pad_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:id="@+id/contactusmain">

                <TextView
                    android:id="@+id/contactus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/contactus"
                    android:textColor="@color/white"

                    android:textSize="@dimen/txt_14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/pad_10dp" >

            <LinearLayout
                android:layout_width="@dimen/pad_0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/pad_5dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/customercare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Customer Care"
                    android:textColor="@color/main_color_gray_dk"
                    android:textSize="@dimen/txt_13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/customertiming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_time"
                    android:textColor="@color/main_color_gray_dk"
                    android:textSize="@dimen/txt_12sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_right_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_cart"
            android:orientation="vertical"
            android:padding="@dimen/pad_10dp"
            android:id="@+id/customerend">

            <TextView
                android:id="@+id/lbl1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Feedback/Suggestions"
                android:textColor="@color/main_color_gray_dk"
                android:textSize="@dimen/txt_13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/pad_3dp"
                android:layout_marginTop="@dimen/pad_5dp"
                android:background="@color/white"
                android:gravity="top"
                android:lines="4"
                android:padding="@dimen/pad_5dp"
                android:textSize="@dimen/txt_14sp" >

            </EditText>

            <TextView
                android:id="@+id/support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_us"
                android:textColor="@color/main_color_gray_dk"
                android:textSize="@dimen/txt_12sp" />
            <TextView
                android:id="@+id/telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contactno"
                android:textColor="@color/main_color_gray_dk"
                android:textSize="@dimen/txt_12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/pad_15dp" >

            <LinearLayout
                android:id="@+id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/btn"
                android:background="@drawable/btn_red"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:drawablePadding="@dimen/pad_5dp"
                    android:text="@string/sendemail"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_16sp"
                    android:textStyle="bold"
                    android:id="@+id/clickhere" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>